tests/should_fail/struct_pattern_wrong_field_count.nv
module fail_struct_pat_count
struct Point { x: Int, y: Int }
let p = Point(1, 2)
match p {
    Point { x } => println(x),
    _ => println("miss")
}
